<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent">
		<ScrollView 
			android:id="@+id/widget54" android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="fill_parent">
				
				
				<CheckBox android:id="@+id/autostartcheckbox" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/main_autostart"
					android:layout_x="50px" android:layout_y="72px">
				</CheckBox>
		
				<CheckBox android:id="@+id/notifisetting"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/main_icon"
					android:layout_x="50px"
					android:layout_y="72px">
				</CheckBox>
		
				<CheckBox android:id="@+id/usingdyndns"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/main_ddusing_cbox" android:layout_x="50px"
					android:layout_y="72px">
				</CheckBox>
		
				<CheckBox android:id="@+id/servercheckbox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/main_connectserver"
					android:layout_x="50px"
					android:layout_y="72px">
				</CheckBox>

				<CheckBox android:id="@+id/allow_remote_reg"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/main_allow_remote_reg"
					android:layout_x="50px"
					android:layout_y="72px">
				</CheckBox>
								
				<TableLayout android:id="@+id/row1" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:layout_gravity="fill_horizontal">
					<TableRow>
					<Button android:text="@string/main_ddbsettings_btn" android:id="@+id/ddsettingsbutton"
						android:layout_width="0dip" android:layout_height="wrap_content"
						android:layout_weight="1" />
						
					<Button android:text="@string/main_changeport_btn" android:id="@+id/edit_portbutton"
					android:layout_width="0dip"
					android:layout_weight="1" />
					</TableRow>
	
					<TableRow>
						<Button android:text="@string/main_usernametext_btn" android:id="@+id/changeusernamebutton"
							android:layout_width="0dip" android:layout_height="fill_parent"
							android:layout_weight="1" 
							/>		
			
						<Button android:text="@string/main_usersettings_btn" android:id="@+id/usersettingsbtn"
							android:layout_width="0dip" android:layout_height="fill_parent"
							android:layout_weight="1" />					
					</TableRow>
					<TableRow>								
						<Button android:text="@string/main_help_btn" android:id="@+id/helpbutton"
							android:layout_width="0dip" android:layout_height="fill_parent"
							android:layout_weight="1" />
					</TableRow>					
				</TableLayout>			
			</LinearLayout>
		</ScrollView>

</LinearLayout>
